config/deployments.yaml
# front
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: eduapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: janfigurapollub/eduapp-front:latest

---
# backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: eduapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: janfigurapollub/eduapp-front:latest
          ports:
            - containerPort: 8080
---
# database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: eduapp
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: database-pvc
