config/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: eduapp
spec:
  selector:
    app: frontend
  ports:
    - port: 3000


---
# backend
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: eduapp
spec:
  selector:
    app: backend
  ports:
    - port: 8080

---
# database
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: eduapp
spec:
  selector:
    app: database
  ports:
    - port: 3306
