config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingeress
  namespace: eudapp
spec:
  rules:
    - host: eduapp
      http:
        paths:
          - pathType: Prefix
            path: "/front"
            backend:
              service:
                name: front-svc
                port:
                  number: 3000
#          - pathType: Prefix
#            path: "/backend"
#            backend:
#              service:
#                name: webapp-svc
#                port:
#                  number: 80
